--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </md-button>
     <h1 flex md-truncate><b>Tarantull</b></h1>
     <div hide-xs>
-      <md-button ng-href="#!/topics">Главная</md-button>
+      <md-button ng-href="#!/topics">Лабораторные работы</md-button>
       <md-button ng-href="#!/about">О сайте</md-button>
     </div>
   </md-toolbar>
@@ -28,7 +28,7 @@
 
     <md-sidenav class="md-sidenav-left md-whiteframe-4dp" md-component-id="drawer" ng-click="toggle()">
       <div layout="column">
-        <md-button ng-href="#!/topics">Главная</md-button>
+        <md-button ng-href="#!/topics">Лабораторные работы</md-button>
         <md-button ng-href="#!/about">О сайте</md-button>
       </div>
     </md-sidenav>
