--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <script src="app/list/list.component.js"></script>
   
   <canvas id="canvas" width="400" height="400"
-					style="background-color:#fff">
+					style="background-color:#00ff">
 			</canvas>
 				<script>
 					var canvas = document.getElementById("canvas");
