--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <script src="app/list/list.component.js"></script>
   
   <canvas id="canvas" width="400" height="400"
-					style="background-color:#00ff">
+					style="background-color:black">
 			</canvas>
 				<script>
 					var canvas = document.getElementById("canvas");
@@ -79,15 +79,15 @@
 					  ctx.fillStyle = 'white';
 					  ctx.fill();
 					  grad = ctx.createRadialGradient(0,0,radius*0.95, 0,0,radius*1.05);
-					  grad.addColorStop(0, '#007dd1');
+					  grad.addColorStop(0, 'red');
 					  grad.addColorStop(0.5, 'white');
-					  grad.addColorStop(1, '#007dd1');
+					  grad.addColorStop(1, 'red');
 					  ctx.strokeStyle = grad;
 					  ctx.lineWidth = radius*0.1;
 					  ctx.stroke();
 					  ctx.beginPath();
 					  ctx.arc(0, 0, radius*0.1, 0, 2*Math.PI);
-					  ctx.fillStyle = '#007dd1';
+					  ctx.fillStyle = 'red';
 					  ctx.fill();
 							}
 					function drawNumbers(ctx, radius) {
